# tool_hub

./: .env.example  .gitignore  README.md  pyproject.toml
examples/: .env.example  composio_usage.py  precompute_pinecone_index.py
experiments/: .env.example  e1--mcp-tools-correlation.ipynb  e2--llm-vs-toolhub.ipynb  e5--llm-priors-update-vs-static.ipynb
experiments/e3--gpt-vs-nvidia-orchestrator-8b/: notebook.ipynb  orchestrator_vllm_simple.py
experiments/e4--gpt-vs-nvidia-orchestrator-8b-v2 /: notebook.ipynb  orchestrator_vllm_simple.py
experiments/e6--reflexion-vs-reactive-agent/: notebook.ipynb  reflexion_vs_reactive_comparison.csv
tool_hub/: __init__.py  core.py  models.py
