[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tool-hub"
version = "0.1.7"
description = "A Hub & Spoke tool selection engine for MCP toolkits with Pinecone support"
readme = "README.md"
authors = [
    { name = "Akshay Sharma", email = "akshay@getseer.dev" }
]
requires-python = ">=3.9"
dependencies = [
    "openai>=2.8.1",
    "faiss-cpu>=1.13.0",
    "numpy>=2.3.5",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "tqdm>=4.0.0",
]

[tool.setuptools]
packages = ["tool_hub"]

[project.optional-dependencies]
dev = [
    "pytest",
    "python-dotenv",
    "black",
    "isort",
    "composio>=0.9.2",
    "composio-core>=0.7.21",
    "composio-langchain>=0.9.4",
    "pinecone<8.0.0",
    "langchain-pinecone>=0.2.13",
]

[project.urls]
Homepage = "https://github.com/seer-engg/tool-hub"
Documentation = "https://github.com/seer-engg/tool-hub#readme"
Repository = "https://github.com/seer-engg/tool-hub"
Issues = "https://github.com/seer-engg/tool-hub/issues"